# caitlyn-openapi-mcp

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.otel.yml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: GITHUB_ACTIONS_SETUP.md  RELEASE.md  TELEMETRY.md
scripts/: download_model.py  entrypoint.sh  test_telemetry.py
src/openapi_mcp/: __init__.py  config.py  docs_links.py  model.py  openapi_loader.py  openapi_loader.py.bak  resources.py  server.py  telemetry.py  tools.py  vector_search.py
tests/: __init__.py  test_config.py  test_docs_links.py  test_openapi_loader.py  test_resources.py  test_tools.py
