[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caitlyn-openapi-mcp"
version = "1.0.0"
description = "MCP server that exposes OpenAPI specifications as queryable documentation resources for LLMs, with Scalar deep links and semantic search"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Caitlyn Team" }
]
keywords = ["mcp", "openapi", "docs", "bedrock", "agentcore", "scalar", "vector-search", "semantic-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.7.1",
    "prance>=0.22.0",
    "openapi-core>=0.19.0",
    "openapi-spec-validator>=0.7.1",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "aws-opentelemetry-distro>=0.10.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "python-semantic-release>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/caitlyn-ai/caitlyn-openapi-mcp"
Documentation = "https://github.com/caitlyn-ai/caitlyn-openapi-mcp#readme"
Repository = "https://github.com/caitlyn-ai/caitlyn-openapi-mcp"
Issues = "https://github.com/caitlyn-ai/caitlyn-openapi-mcp/issues"
Changelog = "https://github.com/caitlyn-ai/caitlyn-openapi-mcp/releases"
"Security Policy" = "https://github.com/caitlyn-ai/caitlyn-openapi-mcp/security/policy"

[project.scripts]
caitlyn-openapi-mcp = "openapi_mcp.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["openapi_mcp*"]

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# coverage
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# black
[tool.black]
line-length = 160
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ruff
[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

# pyright
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "venv",
    "build",
    "dist"
]

# semantic-release
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/openapi_mcp/__init__.py:__version__"]
branch = "main"
upload_to_vcs_release = true
build_command = "pip install build && python -m build"
major_on_zero = false
commit_parser = "angular"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge pull request",
    "^Merge branch",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
